--- a/products.html
+++ b/products.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/product-style.css" rel="stylesheet" >
 </head>
 
 <body>
@@ -43,6 +44,24 @@
       </div>
     </div>
   </main>
+  <div class="container-barra">
+    <aside class="sidebar">
+      <h4><b>Marca</b></h4>
+      <p>Fiat</p>
+      <p>Peugeot</p>
+      <p>Bugatti</p>
+      <p>Suzuki</p>
+      <p>Chevrolet</p>
+      <br>
+      <h4><b>Modelo</b></h4>
+      <p>Onix Joy</p>
+      <p>Celerio</p>
+      <p>Way</p>
+      <p>208</p>
+      <p>Chiron</p>
+    </aside>
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
