--- a/products.html
+++ b/products.html
@@ -59,6 +59,10 @@
       <p>Way</p>
       <p>208</p>
       <p>Chiron</p>
+      <br>
+      <h4><b>Precio/USD</b></h4>
+      <input class="precio" id="minimo" name="precioMin" value="mínimo">
+      <input class="precio" id="maximo" name="precioMax" value="máximo">
     </aside>
   </div>
 
