--- a/login.html
+++ b/login.html
@@ -5,31 +5,34 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
-  
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: rgb(248, 249, 250);
-    }
-  </style>
+  <link href="/workspace-inicial/css/login-style.css" rel="stylesheet">
+  <link href="/workspace-inicial/img/login image.png">
 </head>
 
 <body>
   <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+  <div class="login-container">
+    <div>
+      <input type="text" class="input-box" id="name" placeholder="Usuario">
     </div>
+    <div>
+      <input type="password" class="input-box" id="password" placeholder="Contraseña">
+    </div>
+    <div>
+      <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1" target="_blank"> ¿Olvidaste tu contraseña?</a>
+    </div>
+
+    <button class="login-button" id="logButton">INICIAR SESIÓN</button>
+
+  </div>
+  <div class="image-container">
+    <img src="/workspace-inicial/img/login image.png" class="image">
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
+      <p style="margin-left: 10em;">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
   <script src="js/login.js"></script>
