Lista la creacion de tarjetas

--- a/products.html
+++ b/products.html
@@ -37,34 +37,44 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+  <main>
+    <div class="full-container">
+      <div class="container-barra">
+        <aside class="sidebar">
+          <h4><b>Marca</b></h4>
+          <p>Fiat</p>
+          <p>Peugeot</p>
+          <p>Bugatti</p>
+          <p>Suzuki</p>
+          <p>Chevrolet</p>
+          <br>
+          <h4><b>Modelo</b></h4>
+          <p>Onix Joy</p>
+          <p>Celerio</p>
+          <p>Way</p>
+          <p>208</p>
+          <p>Chiron</p>
+          <br>
+          <h4><b>Precio/USD</b></h4>
+          <input class="precio" id="minimo" name="precioMin" value="mínimo">
+          <input class="precio" id="maximo" name="precioMax" value="máximo">
+        </aside>
+      </div>
+    
+      <div id="card-container">
+        <!-- <div class="card-box">
+          <img src="img/car1.jpg" alt="auto1">
+          <h6>Titiulo de prueba</h6>
+          <p>Esta es una descripción de prueba</p>
+          <h6>99999</h6>
+          <hr>
+          <p class="cant-vendidos">Cantidad de vendidos: </p>
+        </div> -->
+        
       </div>
     </div>
   </main>
-  <div class="container-barra">
-    <aside class="sidebar">
-      <h4><b>Marca</b></h4>
-      <p>Fiat</p>
-      <p>Peugeot</p>
-      <p>Bugatti</p>
-      <p>Suzuki</p>
-      <p>Chevrolet</p>
-      <br>
-      <h4><b>Modelo</b></h4>
-      <p>Onix Joy</p>
-      <p>Celerio</p>
-      <p>Way</p>
-      <p>208</p>
-      <p>Chiron</p>
-      <br>
-      <h4><b>Precio/USD</b></h4>
-      <input class="precio" id="minimo" name="precioMin" value="mínimo">
-      <input class="precio" id="maximo" name="precioMax" value="máximo">
-    </aside>
-  </div>
+  
 
   <footer class="text-muted">
     <div class="container">
