--- a/products.html
+++ b/products.html
@@ -39,37 +39,27 @@
   </nav>
   <main>
     <div class="full-container">
-      <div class="container-barra">
         <aside class="sidebar">
           <h4><b>Marca</b></h4>
-          <p>Fiat</p>
-          <p>Peugeot</p>
-          <p>Bugatti</p>
-          <p>Suzuki</p>
-          <p>Chevrolet</p>
+          <p class="selector-marca-modelo">Fiat</p>
+          <p class="selector-marca-modelo">Peugeot</p>
+          <p class="selector-marca-modelo">Bugatti</p>
+          <p class="selector-marca-modelo">Suzuki</p>
+          <p class="selector-marca-modelo">Chevrolet</p>
           <br>
           <h4><b>Modelo</b></h4>
-          <p>Onix Joy</p>
-          <p>Celerio</p>
-          <p>Way</p>
-          <p>208</p>
-          <p>Chiron</p>
+          <p class="selector-marca-modelo">Onix Joy</p>
+          <p class="selector-marca-modelo">Celerio</p>
+          <p class="selector-marca-modelo">Way</p>
+          <p class="selector-marca-modelo">208</p>
+          <p class="selector-marca-modelo">Chiron</p>
           <br>
           <h4><b>Precio/USD</b></h4>
           <input class="precio" id="minimo" name="precioMin" value="mínimo">
           <input class="precio" id="maximo" name="precioMax" value="máximo">
         </aside>
-      </div>
     
-      <div id="card-container">
-        <!-- <div class="card-box">
-          <img src="img/car1.jpg" alt="auto1">
-          <h6>Titiulo de prueba</h6>
-          <p>Esta es una descripción de prueba</p>
-          <h6>99999</h6>
-          <hr>
-          <p class="cant-vendidos">Cantidad de vendidos: </p>
-        </div> -->
+      <div id="card-container" style="width: calc(100% - 150px);">
         
       </div>
     </div>
