--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
   </div>
   <div class="image-container">
-    <img src="img/login image.png" class="image">
+    <img src="img/login image.png" class="image" alt="Imagen presentacion del E-commerce">
   </div>
   </main>
   <footer class="text-muted">
