--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
   <script src="js/init.js"></script>
 
   <!-- Verificación de sesión (Desafío) -->
-  <script>
+  <!-- <script>
    // Si no existe usuario en localStorage, redirige al login
    if (!localStorage.getItem("usuario")) {
     window.location.href = "login.html";
    }
-  </script> 
+  </script> --> 
 </body>
+
 
 </html>
