--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" href="login.html">ver login (borrar luego)</a>
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
@@ -100,3 +103,4 @@
 
 
 </html>
+
