--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
 <body>
   <main class="mt-5">
   <div class="login-container">
+    <div class="mobile-title"> <img class="mobile-logo" src="img/login-removebg-preview.png" alt="login image for mobile"> </div>
     <div>
       <input type="text" class="input-box" id="name" placeholder="Usuario">
     </div>
@@ -25,12 +26,12 @@
 
   </div>
   <div class="image-container">
-    <img src="img/login image.png" class="image" alt="Imagen presentacion del E-commerce">
+    <img src="img/login image.png" class="image">
   </div>
   </main>
   <footer class="text-muted">
     <div class="container">
-      <p style="margin-left: 10em;">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
       </p>
     </div>
   </footer>
