--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
   </div>
   <div class="image-container">
-    <img src="img/login image.png" class="image">
+    <img src="img/login image.png" class="image" alt="login image for desktop">
   </div>
   </main>
   <footer class="text-muted">
