Cambiadas las opciones del filtro falso

--- a/products.html
+++ b/products.html
@@ -42,10 +42,10 @@
 
       <p>Ordenar por </p>
       <select id="filtro">
-        <option value="">Más relevantes</option>
-        <option value="1">$ Mayor a menor</option>
-        <option value="2">$ Menor a mayor</option>
-        <option value="3">Más comprados</option>
+        <option value="">Por defecto</option>
+        <option value="1">Más relevantes</option>
+        <option value="2">$ Mayor a menor</option>
+        <option value="3">$ Menor a mayor</option>
       </select>
       
     </div>
