--- a/categories.html
+++ b/categories.html
@@ -30,10 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
         </ul>
       </div>
+      <p id="usuario-nav"></p>
     </div>
   </nav>
   <main class="pb-5">
