--- a/index.html
+++ b/index.html
@@ -29,16 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item ms-auto">
-            <span class="nav-link" id="usuario-nav"></span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="login.html">ver login (borrar luego)</a>
-          </li>
-          <li class="nav-item">
-          </li>
         </ul>
       </div>
+      <p id="usuario-nav"></p>
     </div>
   </nav>
   <main>
