--- a/sell.html
+++ b/sell.html
@@ -29,10 +29,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
         </ul>
       </div>
+      <p id="usuario-nav"></p>
     </div>
   </nav>
   <div class="container">
