Arreglado el desafiate en todas las páginas

--- a/categories.html
+++ b/categories.html
@@ -25,15 +25,16 @@
             <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="categories.html">Categorías</a>
+            <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
+          <li class="nav-item"></li>
         </ul>
       </div>
-      <p id="usuario-nav"></p>
     </div>
+    <p id="usuario-nav"></p>
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
@@ -85,7 +86,8 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
+      </p>
     </div>
   </footer>
   <div id="spinner-wrapper">
