--- a/sell.html
+++ b/sell.html
@@ -27,12 +27,13 @@
             <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="sell.html">Vender</a>
+            <a class="nav-link" href="sell.html">Vender</a>
           </li>
+          <li class="nav-item"></li>
         </ul>
       </div>
-      <p id="usuario-nav"></p>
     </div>
+    <p id="usuario-nav"></p>
   </nav>
   <div class="container">
     <div class="text-center p-4">
