--- a/cart.html
+++ b/cart.html
@@ -29,10 +29,11 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
+          <li class="nav-item"></li>
         </ul>
       </div>
-      <p id="usuario-nav"></p>
     </div>
+    <p id="usuario-nav"></p>
   </nav>
   <main>
     <div class="container">
