--- a/sell.html
+++ b/sell.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item"></li>
         </ul>
