Agregado lo de que cambie los productos según el catId del localStorage

--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
     <div class="full-container">
 
       <div class="sidebar-container">
-        <h2>Autos</h2>
+        <h2 id="titulo"></h2>
         <p id="resultados"></p>
         <aside class="sidebar">
           <div id="selector-de-marca">
