--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/product-style.css" rel="stylesheet">
-<link rel="stylesheet" href="css\filtro-precio.css">
+  <link rel="stylesheet" href="css\filtro-precio.css">
 </head>
 
 <body>
@@ -40,34 +40,34 @@
   </nav>
   <main>
 
-  <div class="top-bar">
-    <div class="titlo-resultados">
-      <h2>Autos</h2>
-      <p id="resultados"></p>
-    </div>
+    <div class="top-bar">
+      <div class="titulo-resultados">
+        <h2>Autos</h2>
+        <p id="resultados"></p>
+      </div>
 
-    <div class="barra-filtro">
-      <div id="selector-de-precio">
-        <div class="fila">
-          <p><b>Precio</b></p> 
-          <select id="moneda">
-          <option value="USD">USD</option>
-          <option value="UY">$UY</option>
-          </select>
-        </div> 
-        
-        <div clas="fila">
-          <input class="precio" id="minimo" name="precioMin" placeholder="Mínimo">
-          <input class="precio" id="maximo" name="precioMax" placeholder="Máximo">
-        </div>
-        
-        <div class="fila">
-         <button id="aplicar">Aplicar</button>
-         <button id="limpiar">Limpiar</button>
+      <div class="barra-filtro">
+        <div id="selector-de-precio">
+          <div class="fila">
+            <p><b>Precio</b></p>
+            <select id="moneda">
+              <option value="USD">USD</option>
+              <option value="UY">$UY</option>
+            </select>
+          </div>
+
+          <div class="fila">
+            <input class="precio" id="minimo" name="precioMin" placeholder="Mínimo">
+            <input class="precio" id="maximo" name="precioMax" placeholder="Máximo">
+          </div>
+
+          <div class="fila">
+            <button id="aplicar">Aplicar</button>
+            <button id="limpiar">Limpiar</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
     <div class="filtros-orden">
       <p>Ordenar por </p>
@@ -80,7 +80,6 @@
 
     </div>
     <div class="full-container">
-
       <div class="sidebar-container">
         <aside class="sidebar">
           <div id="selector-de-marca">
