--- a/products.html
+++ b/products.html
@@ -72,13 +72,13 @@
     <div class="filtros-orden">
       <p>Ordenar por </p>
       <select id="filtro">
-        <option value="">Por defecto</option>
-        <option value="1">Más relevantes</option>
-        <option value="2">$ Mayor a menor</option>
-        <option value="3">$ Menor a mayor</option>
+        <option value="">defecto</option>
+        <option value="1">más relevantes</option>
+        <option value="2">$ descendente</option>
+        <option value="3">$ ascendente</option>
       </select>
-
     </div>
+    
     <div class="full-container">
       <div class="sidebar-container">
         <aside class="sidebar">
