--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
             <p><b>Precio</b></p>
             <select id="moneda">
               <option value="USD">USD</option>
-              <option value="UY">$UY</option>
+              <option value="UYU">UYU</option>
             </select>
           </div>
 
