--- a/products.html
+++ b/products.html
@@ -42,7 +42,7 @@
 
     <div class="top-bar">
       <div class="titulo-resultados">
-        <h2>Autos</h2>
+        <h2 id="titulo"></h2>
         <p id="resultados"></p>
       </div>
 
