--- a/products.html
+++ b/products.html
@@ -60,9 +60,20 @@
         </div>
         <aside class="sidebar">
           <div id="selector-de-precio">
+            <div class="fila">
+              <p><b>Precio</b></p>
+              <select id="moneda">
+                <option value="USD">USD</option>
+                <option value="UYU">UYU</option>
+              </select>
+            </div>
+             <div id="buscador-nombre" class="fila">  
+                <input type="search" id="buscador" placeholder="Buscar productos..." />
+            </div>
+
             <div class="fila" id="entradas-precio">
-              <input class="precio" id="minimo" name="precioMin" placeholder="Mínimo" />
-              <input class="precio" id="maximo" name="precioMax" placeholder="Máximo" />
+              <input class="precio" id="minimo" name="precioMin" placeholder="Prec. Min" />
+              <input class="precio" id="maximo" name="precioMax" placeholder="Prec. Max" />
             </div>
 
             <div class="fila">
