Agregué manualmente el html de related products que se había borrado

--- a/product-info.html
+++ b/product-info.html
@@ -75,6 +75,11 @@
     </div>
   </main>
 
+  <div class="related">
+      <h4>Productos relacionados</h4>
+      <div id="relatedProducts" class="related-container"></div>
+  </div>
+  
 <section id="calificaciones" class="mt-4">
   <h3>Calificaciones</h3>
 
