--- a/login.html
+++ b/login.html
@@ -13,7 +13,13 @@
   <div class="login-container">
     <div class="mobile-title"> <img class="mobile-logo" src="img/login-removebg-preview.png" alt="login image for mobile"> </div>
     <div>
-      <input type="email" class="input-box" id="name" placeholder="Usuario">
+      <input type="text" class="input-box" id="name" placeholder="Nombre">
+    </div>
+    <div>
+      <input type="text" class="input-box" id="lastname" placeholder="Apellido">
+    </div>
+    <div>
+      <input type="email" class="input-box" id="mail" placeholder="Email">
     </div>
     <div>
       <input type="password" class="input-box" id="password" placeholder="Contraseña">
