--- a/my-profile.html
+++ b/my-profile.html
@@ -51,11 +51,10 @@
     <p id="usuario-nav"></p>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+    <select onchange="getTema()" name="theme" id="theme">
+      <option value="Claro">Claro</option>
+      <option value="Oscuro">Oscuro</option>
+    </select>
   </main>
   <footer class="text-muted">
     <div class="container">
