--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <!-- Verificación de sesión (Desafío) -->
   <script>
    // Si no existe usuario en sessionStorage, redirige al login
-   if (!sessionStorage.getItem("usuario")) {
+   if (!sessionStorage.getItem("name")) {
     window.location.href = "login.html";
    }
   </script>
@@ -100,6 +100,7 @@
 
 
 </html>
+
 
 
 
