--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
+      </p>
     </div>
   </footer>
   <script src="js/bootstrap.bundle.min.js"></script>
@@ -91,18 +92,12 @@
 
   <!-- Verificación de sesión (Desafío) -->
   <script>
-   // Si no existe usuario en sessionStorage, redirige al login
-   if (!sessionStorage.getItem("usuario")) {
-    window.location.href = "login.html";
-   }
+    // Si no existe usuario en sessionStorage, redirige al login
+    if (!sessionStorage.getItem("name")) {
+      window.location.href = "login.html";
+    }
   </script>
 </body>
 
 
 </html>
-
-
-
-
-
-
