--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -36,8 +37,8 @@
     <p id="usuario-nav"></p>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
-    <div class="album py-5 bg-light">
+
+    <div class="album py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -72,7 +73,8 @@
           </div>
         </div>
         <div class="row">
-          <a class="btn btn-light btn-lg btn-block" href="categories.html">Y mucho más!</a>
+          <a class="btn btn-light btn-lg btn-block" href="categories.html"
+            style="background-color: var(--secondary-bg-color); color: var(--text-color); border: 0;">Y mucho más!</a>
         </div>
       </div>
     </div>
