--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -34,11 +33,12 @@
         </ul>
       </div>
     </div>
-    <p id="usuario-nav"></p>
+    <p id="usuario-nav" style="cursor: pointer;"></p>
   </nav>
-  <main>
 
-    <div class="album py-5">
+  <main>
+    <div class="jumbotron text-center"></div>
+    <div class="album py-5 bg-light">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -73,8 +73,7 @@
           </div>
         </div>
         <div class="row">
-          <a class="btn btn-light btn-lg btn-block" href="categories.html"
-            style="background-color: var(--secondary-bg-color); color: var(--text-color); border: 0;">Y mucho más!</a>
+          <a class="btn btn-light btn-lg btn-block" href="categories.html">Y mucho más!</a>
         </div>
       </div>
     </div>
@@ -84,8 +83,7 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
-      </p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
   <script src="js/bootstrap.bundle.min.js"></script>
@@ -94,10 +92,18 @@
 
   <!-- Verificación de sesión (Desafío) -->
   <script>
-    // Si no existe usuario en sessionStorage, redirige al login
-    if (!sessionStorage.getItem("name")) {
-      window.location.href = "login.html";
-    }
+   // Si no existe usuario en sessionStorage, redirige al login
+   if (!sessionStorage.getItem("name")) {
+    window.location.href = "login.html";
+   }
   </script>
 </body>
+
+
 </html>
+
+
+
+
+
+
