Terminado el toggle del tema

--- a/my-profile.html
+++ b/my-profile.html
@@ -45,11 +45,14 @@
           <img src="img/img_perfil.png" alt="profile picture">
         </div>
 
-        <div class="theme-container">
+        <div class="theme-container" onclick="toggleTheme()">
           <div class="theme-title">
             <h3>Tema</h3>
           </div>
-          <p>sol/luna</p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
+            viewBox="0 0 16 16" id="theme-icon">
+
+          </svg>
           <div></div>
         </div>
         <div id="update-profile">
