--- a/login.html
+++ b/login.html
@@ -6,34 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link href="css/login-style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <main class="mt-5">
-  <div class="login-container">
-    <div class="mobile-title"> <img class="mobile-logo" src="img/login-removebg-preview.png" alt="login image for mobile"> </div>
-    <div>
-      <input type="text" class="input-box" id="name" placeholder="Nombre">
-    </div>
-    <div>
-      <input type="text" class="input-box" id="lastname" placeholder="Apellido">
-    </div>
-    <div>
-      <input type="email" class="input-box" id="mail" placeholder="Email">
-    </div>
-    <div>
-      <input type="password" class="input-box" id="password" placeholder="Contraseña">
-    </div>
-    <div>
-      <a href="" target="_blank"> ¿Olvidaste tu contraseña?</a>
-    </div>
+    <div class="login-container">
+      <div class="mobile-title"> <img class="mobile-logo" src="img/login-removebg-preview.png"
+          alt="login image for mobile"> </div>
+      <div>
+        <input type="text" class="input-box" id="name" placeholder="Nombre">
+      </div>
+      <div>
+        <input type="text" class="input-box" id="lastname" placeholder="Apellido">
+      </div>
+      <div>
+        <input type="email" class="input-box" id="mail" placeholder="Email">
+      </div>
+      <div>
+        <input type="password" class="input-box" id="password" placeholder="Contraseña">
+      </div>
+      <div>
+        <a href="" target="_blank"> ¿Olvidaste tu contraseña?</a>
+      </div>
 
-    <button class="login-button" id="logButton">INICIAR SESIÓN</button>
+      <button class="login-button" id="logButton">INICIAR SESIÓN</button>
 
-  </div>
-  <div class="image-container">
-    <img src="img/login image.png" class="image" alt="login image for desktop">
-  </div>
+    </div>
+    <div class="image-container">
+      <img src="img/login image.png" class="image" alt="login image for desktop">
+    </div>
   </main>
   <footer class="text-muted">
     <div class="container">
@@ -42,6 +44,7 @@
     </div>
   </footer>
   <script src="js/login.js"></script>
+  <script src="js/init.js"></script>
 </body>
 
 </html>
