--- a/my-profile.html
+++ b/my-profile.html
@@ -49,7 +49,7 @@
           <div class="theme-title">
             <h3>Tema</h3>
           </div>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
+          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi"
             viewBox="0 0 16 16" id="theme-icon">
 
           </svg>
