--- a/update-profile.html
+++ b/update-profile.html
@@ -40,11 +40,13 @@
     <div class="mattress">
       <div class="left-container">
         <div class="title">
-          <h2>Mi Perfil </h2>
+          <h2>Actualizar perfíl </h2>
         </div>
+        <label class="label-photo" style="color: var(--text-color); background-color: none;">Click para cambiar foto de perfíl.</label>
         <div class="image">
           <img id="profile-pic" src="img/img_perfil.png" alt="profile picture">
         </div>
+        
       </div>
       <div class="right-container">
         <div class="hover-container">
