--- a/sell.html
+++ b/sell.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
     </div>
-    <p id="usuario-nav"></p>
+    <p id="usuario-nav" style="cursor: pointer"></p>
   </nav>
   <div class="container">
     <div class="text-center p-4">
