--- a/categories.html
+++ b/categories.html
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item"></li>
+          <li class="nav-item" style="cursor: pointer"></li>
         </ul>
       </div>
     </div>
