--- a/categories.html
+++ b/categories.html
@@ -31,11 +31,11 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item" style="cursor: pointer"></li>
+          <li class="nav-item" </li>
         </ul>
       </div>
     </div>
-    <p id="usuario-nav"></p>
+    <p id="usuario-nav" style="cursor: pointer">></p>
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
