--- a/product-info.html
+++ b/product-info.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
     </div>
-    <p id="usuario-nav"></p>
+    <p id="usuario-nav" style="cursor: pointer">></p>
   </nav>
   <main>
 
