--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
     </div>
-    <p id="usuario-nav"></p>
+    <p id="usuario-nav" style="cursor: pointer"></p>
   </nav>
   <main>
     <div class="top-bar"></div>
