--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/carrito.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,9 +38,7 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <div id="contenedor-carrito"></div>
     </div>
   </main>
   <footer class="text-muted">
