--- a/product-info.html
+++ b/product-info.html
@@ -30,7 +30,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
-          </li>
+          </li>          
           <li class="nav-item">
             <a href="cart.html" class="nav-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart"
@@ -71,6 +71,9 @@
         </hr>
         <p id="product-soldcount"></p>
         <div class="botones">
+          <label for="cantidad">Cantidad:</label>
+          <input type="number" id="cantidad" min="1" value="1">
+          <p>Subtotal: <span id="subtotal"></span></p>
           <button id="comprar">COMPRAR</button>
           <button id="agr-carrito">AÑADIR AL CARRITO</button>
           <div class="companies">
