Punto 4, puesto el subtotal en las tarjetas y botón de limpiar carrito

--- a/products.html
+++ b/products.html
@@ -32,8 +32,12 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item position-relative" style="width: 40px;">
             <a href="cart.html" class="nav-link">
+              <span id="cart-count" class="position-absolute start-100 translate-middle badge rounded-pill bg-danger"
+                style="font-size: 10px; padding: 2px; top: 90%">
+                0
+              </span>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart"
                 viewBox="0 0 16 16">
                 <path
