--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item position-relative" style="width: 40px;">
+            <span id="cart-count" class="position-absolute start-100 translate-middle badge rounded-pill bg-danger"
+              style="font-size: 10px; padding: 2px; top: 90%">
+              0
+            </span>
             <a href="cart.html" class="nav-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart"
                 viewBox="0 0 16 16">
